# adventofocaml

./: .gitignore  README.md  adventofocaml.opam  dune-project  fetch.sh
dune.lock/: core_bench.pkg  delimited_parsing.pkg  lock.dune  ocaml-compiler.pkg  ocaml-config.pkg  ocaml-variants.pkg  ocaml.pkg
lib/: dune  geninputs.ml  hello_benchmarks.ml  hello_expect.ml  playground.ml  year2024_day01.ml  year2024_day02.ml  year2024_day05.ml  year2024_day07.ml  year2025_day01.ml  year2025_day02.ml  year2025_day03.ml  year2025_day05.ml  year2025_day06.ml  year2025_day07.ml  year2025_day08.ml  year2025_day09.ml  year2025_day10.ml  year2025_day11.ml
lib/base-extensions/: arrayx.ml  arrayx.mli  dune  optionx.ml  optionx.mli  stringseq.ml  stringseq.mli  stringx.ml  stringx.mli
test/: dune
