(library
 (name adventofocaml)
 (modules year2024_day01 year2024_day07 inputs playground)
 (inline_tests)
 (libraries base stdio)
 (preprocess
  (pps ppx_expect ppx_let ppx_sexp_conv)))

(rule
 (deps
  (source_tree .))
 (action
  (with-stdout-to
   inputs.ml
   (run ./geninputs.exe))))

(executable
 (name geninputs)
 (modules geninputs)
 (libraries base core_unix.sys_unix stdio))
