(library
 (name adventofocaml)
 (modules
  year2024_day01
  year2024_day02
  year2024_day05
  year2024_day07
  year2025_day01
  year2025_day02
  year2025_day03
  year2025_day06
  year2025_day07
  year2025_day11
  inputs
  playground)
 (inline_tests)
 (libraries adventofocaml.base_extensions base stdio textutils.ascii_table)
 (preprocess
  (pps ppx_compare ppx_hash ppx_expect ppx_let ppx_sexp_conv ppx_sexp_value)))

(rule
 (deps
  (source_tree .))
 (action
  (with-stdout-to
   inputs.ml
   (run ./geninputs.exe))))

(executable
 (name geninputs)
 (modules geninputs)
 (libraries base core_unix.sys_unix stdio))
